fix slide flicker

--- a/_sass/slide-slideshow.sass
+++ b/_sass/slide-slideshow.sass
@@ -10,7 +10,6 @@
     float: left
     position: relative
     transform: translate3d(0,0,0)
-    animation: marquee 15s linear infinite
     .image
       background-size: cover
       background-position: center
@@ -18,11 +17,12 @@
       height: 500px
       max-width: 500px
       width: 500px
+      animation: marquee 15s linear infinite
 
 // https://stackoverflow.com/questions/24152925/using-jquery-to-set-css-keyframe
 +keyframes(marquee)
   0%
     transform: translateX(0)
   100%
-    // !TODO the translate should be a variable set by js (changes with different images and widths (for now width are set to 500 so it is amount of images*500))
-    transform: translateX(-1500px)
+    // !TODO the translate should be a variable set by js (changes with different images and widths (for now width are set to 500 so it is amount of images*100%))
+    transform: translateX(-300%)
